<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="horizontal"
    android:id="@+id/Activity_Main">

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/Main_Frame">

        <ImageView
            android:layout_width="152dp"
            android:layout_height="171dp"
            android:id="@+id/logo"
            android:layout_gravity="center_horizontal|top"
            android:src="@drawable/icone" />
    </FrameLayout>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu"
        android:id="@+id/menu_btn"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="143dp"
        android:onClick="showMenu"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/orders"
        android:id="@+id/orders_btn"
        android:layout_below="@+id/menu_btn"
        android:layout_centerHorizontal="true"
        android:onClick="order"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/account"
        android:id="@+id/account_btn"
        android:layout_below="@+id/orders_btn"
        android:layout_centerHorizontal="true"
        android:onClick="account"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/account"
        android:id="@+id/stock_btn"
        android:layout_below="@+id/account_btn"
        android:layout_centerHorizontal="true"
        android:onClick="showStock"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/addWaiter"
        android:id="@+id/addWaiter_btn"
        android:layout_below="@+id/stock_btn"
        android:layout_centerHorizontal="true"
        android:onClick="add"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/stats"
        android:id="@+id/stats_btn"
        android:layout_below="@+id/addWaiter_btn"
        android:layout_centerHorizontal="true"
        android:onClick="showStat"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:id="@+id/logout_btn"
        android:layout_marginTop="31dp"
        android:layout_below="@+id/stats_btn"
        android:layout_alignLeft="@+id/stock_btn"
        android:layout_alignStart="@+id/stock_btn"
        android:onClick="logout"/>

</RelativeLayout>